Merge pull request #11
* Add production server configuration to Swagger API documentation

* Add field validation exception handling and message properties